@@ -73,19 +73,25 @@
 - [ ] Make a top-level DEPENDENCIES file (from CI/before_install.sh)
   and remove all others
 ***** TODO Correct NEW project setup
+      CLOCK: [2016-01-05 mar. 22:14]--[2016-01-05 mar. 22:20] =>  0:06
+      CLOCK: [2016-01-05 mar. 21:24]--[2016-01-05 mar. 21:41] =>  0:17
       CLOCK: [2016-01-04 lun. 19:42]--[2016-01-04 lun. 19:56] =>  0:14
       CLOCK: [2015-10-29 jeu. 22:37]--[2015-10-29 jeu. 22:46] =>  0:09
-- [-] Must change GNU headers dates for 2016
+- [X] Must change GNU headers dates for 2016
   - [X] in client/
   - [X] in logger/ (if there are sources)
-  - [ ] in meta/
-  - [ ] in network/
-  - [ ] in server/
-  - [ ] in services/
-  - [ ] in src/logger/
-  - [ ] in website/
+  - [X] in meta/
+  - [X] in network/
+  - [X] in server/
+  - [X] in services/
+  - [X] in src/logger/
+  - [X] in website/
 - [ ] The client can't find plugins.cfg, so we have an Ogre error
   =Error: Shell widget menu has zero width and/or height=
+  - [ ] To avoid copying this file in build dir, we could add
+    its name from the CMake root dir in config.h
+    - But what to do when game is installed ?
+  - [ ] We also have to create them from *.cfg.in (with ressources.cfg)
 - [ ] Find how to compute FT and SLOC for the now-global TODO version
 - [ ] Individual project README items should go here
 ***** DONE Must install cookiechoices on rainbrurpg.org
